# faceRecognition

./: .gitignore  README.md
csv/: CMakeLists.txt
csv/result/: pathFace.txt
csv/source/: main.cpp
eigenFace/: CMakeLists.txt
eigenFace/source/: EigenFace.cpp  EigenFace.hpp  main.cpp
path/result/: pathFace.txt
